--- a/formulaire.html
+++ b/formulaire.html
@@ -28,6 +28,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="formulaire.html">Formulaire</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="jeu.html">Jeu</a>
+            </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Chercher" aria-label="Search">
@@ -85,6 +88,17 @@
         </div>
     </div>
 </div>
+
+<!-- FOOTER -->
+<footer class="footer">
+    <div class="container">
+        <div class="row no-gutters">
+            <div class="col-md-12 text-center">
+                <p>Nous ne sommes aucunement responsable de tout arnaque.</p>
+            </div>
+        </div>
+    </div>
+</footer>
 
 <script src="js/jquery-3.3.1.js"></script>
 <script src="js/bootstrap.js"></script> <!-- METTRE LE .JS A LA FIN DU BODY -->
