--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Olivier Rousseau</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,6 +31,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="formulaire.html">Formulaire</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="jeu.html">Jeu</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
