--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="formulaire.html">Formulaire</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="jeu.html">Jeu</a>
+            </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Chercher" aria-label="Search">
